# techradar

./: .gitignore  com.keithfry.ai-techradar-agent.plist  pyproject.toml  run-agent.sh  run.py
.github/scripts/: generate-index.sh
.github/workflows/: deploy-pages.yml
config/: ai-rss-feeds.csv  config.toml  topics.toml
config/feeds/: ai-rss-feeds.csv  robotics-rss-feeds.csv
config/topics/: ai.toml  robotics.toml
docs/plans/: 2026-07-19-news-radar-extraction.md
hooks/: publish.py
techradar/: index.html
techradar/AI/: index.html  podcast.rss
techradar/AI/2025-11/: ai-radar-2025-11-15.html  ai-radar-2025-11-16.html  ai-radar-2025-11-17.html  ai-radar-2025-11-18.html  ai-radar-2025-11-19.html  ai-radar-2025-11-20.html  ai-radar-2025-11-21.html  ai-radar-2025-11-22.html  ai-radar-2025-11-23.html  ai-radar-2025-11-25.html  ai-radar-2025-11-26.html  ai-radar-2025-11-29.html  index.html
techradar/AI/2025-12/: ai-radar-2025-12-01.html  ai-radar-2025-12-02.html  ai-radar-2025-12-03.html  ai-radar-2025-12-04.html  ai-radar-2025-12-05.html  ai-radar-2025-12-06.html  ai-radar-2025-12-07.html  ai-radar-2025-12-09.html  ai-radar-2025-12-10.html  ai-radar-2025-12-11.html  ai-radar-2025-12-12.html  ai-radar-2025-12-13.html  ai-radar-2025-12-14.html  ai-radar-2025-12-15.html  ai-radar-2025-12-16.html  ai-radar-2025-12-18.html  ai-radar-2025-12-19.html  ai-radar-2025-12-20.html  ai-radar-2025-12-21.html  ai-radar-2025-12-22.html  ai-radar-2025-12-23.html  ai-radar-2025-12-24.html  ai-radar-2025-12-26.html  index.html  (+4 more)
techradar/Robotics/: index.html  podcast.rss
(+564 files in other folders)
