[project]
name = "techradar-consumer"
version = "0.1.0"
description = "AI/Robotics digest — consumer of the news-radar package, publishes into web-pages"
requires-python = ">=3.13"
dependencies = [
    "newsradar",
    "python-dotenv",
]

[tool.uv]
package = false

[tool.uv.sources]
newsradar = { path = "../news-radar", editable = true }
